; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/apic/extr_bigsmp_32.c_calculate_ldr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/apic/extr_bigsmp_32.c_calculate_ldr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@APIC_LDR = common dso_local global i32 0, align 4
@APIC_LDR_MASK = common dso_local global i64 0, align 8
@x86_bios_cpu_apicid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @calculate_ldr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @calculate_ldr(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @APIC_LDR, align 4
  %6 = call i64 @apic_read(i32 %5)
  %7 = load i64, i64* @APIC_LDR_MASK, align 8
  %8 = xor i64 %7, -1
  %9 = and i64 %6, %8
  store i64 %9, i64* %3, align 8
  %10 = load i32, i32* @x86_bios_cpu_apicid, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i64 @per_cpu(i32 %10, i32 %11)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = call i64 @SET_APIC_LOGICAL_ID(i64 %13)
  %15 = load i64, i64* %3, align 8
  %16 = or i64 %15, %14
  store i64 %16, i64* %3, align 8
  %17 = load i64, i64* %3, align 8
  ret i64 %17
}

declare dso_local i64 @apic_read(i32) #1

declare dso_local i64 @per_cpu(i32, i32) #1

declare dso_local i64 @SET_APIC_LOGICAL_ID(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
